# ocaml-examples

./: LICENSE  add_lists.ml  array.ml  association-list-demo.ml  at_at_operator.ml  bad-main.ml  class-demo.ml  class-demo2.ml  collections.ml  conditional-logic.ml  custom-operator.ml  debugging.ml  default-parameters.ml  delete-me.ml  destructuring.ml  distance.ml  exceptions.ml  exponentiation.ml  fold.ml  function-application.ml  function-composition.ml  function-keyword.ml  functions.ml  if.ml  interpreter.ml  iteration.ml  labeled-parameters.ml  let-bindings.ml  let-expressions.ml  list-filter.ml  list-find_opt.ml  list-max.ml  list-sum.ml  lists-choose.ml  map-dogs.ml  maps.ml  match.ml  max-list-element.ml  module-contents.ml  modules.ml  (+22 more)
base_demo/: dune-project
compile-to-js/: dune  dune-project  hello.ml
date_formatting/: dune-project
date_formatting/lib/: dune
date_formatting/test/: dune
demo/: demo.opam  dune-project
demo/lib/: dune  geometry.ml  geometry.mli  math.ml  math_lib.ml  points.ml
demo/lib/sub/: mod.ml
demo/lib2/: dune  mod.ml
demo/test/: add.ml  average.ml  dune  test_demo.ml
dream_demo/: .ocamlformat  README.md  dream_demo.opam  dune-project  lib.opam
dream_demo/lib/: dog.ml  dog_row.eml.html  dune
dream_demo/public/: index.html
dream_demo/test/: dune
map_project/: dune-project
map_project/lib/: dune
map_project/test/: dune
module-demo/: main.ml
module_demo2/: dune-project
module_demo2/lib/: dune  math.ml  math.mli
module_demo2/test/: dune
my_dune_project/: dune  dune-project
my_project/: dune-project
my_project/_build/: .db  .digest-db  log
my_project/_build/default/: my_project.dune-package  my_project.install
my_project/_build/default/.dune/: configurator  configurator.v2
my_project/_build/default/lib/: my_lib.cma  my_lib.cmxa  my_lib.cmxs  my_lib.ml-gen  my_math.ml
my_project/_build/default/lib/.merlin-conf/: lib-my_lib
my_project/_build/default/lib/.my_lib.objs/: my_lib__My_math.impl.d
my_project/_build/default/lib/.my_lib.objs/byte/: my_lib.cmi  my_lib.cmo  my_lib.cmt  my_lib__My_math.cmi  my_lib__My_math.cmo  my_lib__My_math.cmt
my_project/_build/default/lib/.my_lib.objs/native/: my_lib.cmx  my_lib__My_math.cmx
my_project/_build/default/test/.merlin-conf/: exe-test_my_project
my_project/_build/default/test/.test_my_project.eobjs/byte/: dune__exe__Test_my_project.cmi  dune__exe__Test_my_project.cmti
my_project/_build/default/test/.test_my_project.eobjs/native/: dune__exe__Test_my_project.cmx
my_project/_build/install/default/lib/my_project/: META  dune-package  opam
my_project/lib/: dune  my_math.ml
my_project/test/: dune
odoc_demo/: dune-project  odoc_demo.opam
odoc_demo/lib/: dune  my_math.ml
odoc_demo/test/: dune  my_math.ml  test.ml
samples/: README.md  dune  dune-project  hashtables.ml  lists.ml  print_list.ml  time_zone.ml
