opam-version: "2.0"
name: "dream_demo"
version: "1.0.0"
authors: "r.mark.volkmann@gmail.com"
maintainer: "r.mark.volkmann@gmail.com"
license: "MIT"
homepage: "https://github.com/mvolkmann/ocaml-examples"
dev-repo: "git+https://github.com/mvolkmann/ocaml-examples"
bug-reports: "https://github.com/mvolkmann/ocaml-examples"
synopsis: "Learning about the Dream framework"
description: "Learning about the Dream framework"

depends: [
  "ocaml" {>= "4.08.0"}
  "dream"
  "dune" {>= "2.0.0"}
  "ppx_yojson_conv"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
