(lang dune 3.14)

(name dream_demo)

(generate_opam_files true)

(source
 (github mvolkmann/ocaml-examples))

(authors "R. Mark Volkmann")
(maintainers "R. Mark Volkmann")
(license LICENSE)
(documentation https://github.com/mvolkmann/ocaml-examples/tree/main/dream_demo)

(package
 (name dream_demo)
 (synopsis "Dream htmx web app")
 (description "This is a Dream-based web app that demonstrates using htmx.")
 (depends ocaml dune)
 (tags
  (topics "Dream" "htmx" "web")))

; This is an attempt to specify how all `.eml.html` files should be processed.
; It is not working.
; Running "dune test" doesn't work with this.
; (dialect
;  (name eml)
;  (implementation
;   (extension eml.html)
;   (preprocess
;    (run dream_eml %{input-file} --workspace %{workspace_root}))))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
