(executables
 ; Can run these with `dune exec ht`, and so on.
 ; If this stanza is included, it must contain
 ; the same number of names as in the names stanza.
 (public_names ht ls pl tz)
 ; Can run these with `dune exec ./hashtables.exe`, and so on.
 (names hashtables lists print_list time_zone)
 (preprocess (pps ppx_deriving.show))
 ; This disables "unused-field" errors.
 (flags (:standard -g -w -69))
 (modes byte)
 (libraries core core_unix.time_unix uuidm))
